# lld-notes

./: README.md  setup.cfg
strategy-pattern/: readme.md
strategy-pattern/src/problem/: main.py  normal_vehicle.py  offroad_vehicle.py  sport_vehicle.py  vehicle.py
strategy-pattern/src/solution/: drive_strategy.py  main.py  vehicle.py
